add save on s keypressed

--- a/templates/basic-with-svg-export/index.html
+++ b/templates/basic-with-svg-export/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>### Template p5 ###</title>
-</head>
-<style>
-body{
-    display: flex;
-    padding: 0;
-    margin: 0;
-    
-    height: 100vh;
-}
+  </head>
+  <style>
+    body {
+      display: flex;
+      padding: 0;
+      margin: 0;
 
-canvas, #defaultCanvas0{
-    display: block;
-    width: 100%;
-    margin: auto;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+      height: 100vh;
+    }
 
+    canvas,
+    #defaultCanvas0 {
+      /* border: 20px solid #fff; */
+      padding: 30px;
+      display: block;
+      width: 100%;
+      margin: auto;
+      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3),
+        0 15px 12px rgba(0, 0, 0, 0.22);
+    }
+  </style>
 
-}
-
-
-</style>
-<body>
-    
+  <body>
     <script src="p5.min.js"></script>
     <script src="p5.svg.js"></script>
     <script src="sketch.js"></script>
-</body>
+  </body>
 </html>
