--- a/templates/basic-with-svg-export/index.html
+++ b/templates/basic-with-svg-export/index.html
@@ -1,34 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>### Template p5 ###</title>
-  </head>
-  <style>
+</head>
+<style>
     body {
-      display: flex;
-      padding: 0;
-      margin: 0;
-
-      height: 100vh;
+        display: flex;
+        padding: 0;
+        margin: 0;
+        height: 100vh;
     }
-
+    
     canvas,
     #defaultCanvas0 {
-      /* border: 20px solid #fff; */
-      padding: 30px;
-      display: block;
-      width: 100%;
-      margin: auto;
-      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3),
-        0 15px 12px rgba(0, 0, 0, 0.22);
+        /* border: 20px solid #fff; */
+        padding: 30px;
+        display: block;
+        width: 100%;
+        margin: auto;
+        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
     }
-  </style>
+    
+    .my-container {
+        opacity: .8;
+        position: absolute;
+    }
+    
+    .slider-container {
+        background-color: lightcoral;
+        padding: 12px 12px;
+        margin: 5px 10px;
+    }
+    
+    .slider-container-inputs {
+        padding-bottom: 10px;
+        display: flex;
+    }
+    
+    .slider-label {
+        text-align: center;
+        font-weight: 800;
+    }
+    
+    input {
+        /* border: none; */
+        margin: auto;
+        padding: auto;
+        /* position: absolute; */
+        text-align: center;
+    }
+</style>
 
-  <body>
+<body>
     <script src="p5.min.js"></script>
     <script src="p5.svg.js"></script>
+    <script src="sliders.js"></script>
+    <script src="slidersGetters.js"></script>
     <script src="sketch.js"></script>
-  </body>
+</body>
+
 </html>
