add sliders with db

--- a/templates/basic-with-svg-export/index.html
+++ b/templates/basic-with-svg-export/index.html
@@ -29,6 +29,25 @@
         position: absolute;
     }
     
+    .buttons-container {
+        position: absolute;
+        /* background-color: red; */
+        display: flex;
+        flex-direction: column;
+        margin: 80px 10px;
+        /* width: 200px; */
+        /* height: 200px; */
+        right: 0;
+    }
+    
+    .button-save {
+        margin: 20px 0px;
+    }
+    
+    .button-preset {
+        margin: 4px 0;
+    }
+    
     .slider-container {
         background-color: lightcoral;
         padding: 12px 12px;
@@ -60,6 +79,7 @@
     <script src="sliders.js"></script>
     <script src="slidersGetters.js"></script>
     <script src="sketch.js"></script>
+    <script src="keyPressed.js"></script>
 </body>
 
 </html>
