--- a/templates/basic-with-svg-export/index.html
+++ b/templates/basic-with-svg-export/index.html
@@ -78,6 +78,7 @@
     <script src="p5.svg.js"></script>
     <script src="sliders.js"></script>
     <script src="slidersGetters.js"></script>
+    <script src="colors.js"></script>
     <script src="sketch.js"></script>
     <script src="keyPressed.js"></script>
 </body>
