add tool to easily make grids

--- a/templates/basic-with-svg-export/index.html
+++ b/templates/basic-with-svg-export/index.html
@@ -13,7 +13,7 @@
         margin: 0;
         height: 100vh;
     }
-    
+
     canvas,
     #defaultCanvas0 {
         /* border: 20px solid #fff; */
@@ -23,12 +23,12 @@
         margin: auto;
         box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
     }
-    
+
     .my-container {
         opacity: .8;
         position: absolute;
     }
-    
+
     .buttons-container {
         position: absolute;
         /* background-color: red; */
@@ -39,31 +39,31 @@
         /* height: 200px; */
         right: 0;
     }
-    
+
     .button-save {
         margin: 20px 0px;
     }
-    
+
     .button-preset {
         margin: 4px 0;
     }
-    
+
     .slider-container {
         background-color: lightcoral;
         padding: 12px 12px;
         margin: 5px 10px;
     }
-    
+
     .slider-container-inputs {
         padding-bottom: 10px;
         display: flex;
     }
-    
+
     .slider-label {
         text-align: center;
         font-weight: 800;
     }
-    
+
     input {
         /* border: none; */
         margin: auto;
@@ -79,6 +79,7 @@
     <script src="sliders.js"></script>
     <script src="slidersGetters.js"></script>
     <script src="colors.js"></script>
+    <script src="pixelGrid.js"></script>
     <script src="sketch.js"></script>
     <script src="keyPressed.js"></script>
 </body>
